--- a/client/src/component/home/component/commonStyle.css
+++ b/client/src/component/home/component/commonStyle.css
@@ -9,6 +9,12 @@
     padding: 0 20px;
     box-shadow: 0px 6px 29px -14px rgba(0, 0, 0, 0.19);
 }
+.userProfileImageHeader {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+}
 .iconColor {
     color: var(--icon);
     font-size: 20px;
@@ -30,7 +36,7 @@
     height: calc(100vh - 60px);
 }
 .searchContainer {
-    padding: 10px 30px;
+    padding: 10px 20px;
 }
 .searchBox {
     width: 100%;
@@ -41,5 +47,183 @@
     background-color: var(--baseColor);
     color: var(--darktext);
 }
+.userListContainer {
+    height: calc(100vh - 168px);
+}
+.userListCard {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--border);
+    border-top: 1px solid var(--border);
+    padding-left: 20px;
+}
+.userListCard:hover {
+    background-color: var(--baseColor);
+    cursor: pointer;
+}
+.userCardActive {
+    background-color: var(--border);
+}
+
+.userProfileImage {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px solid var(--lighttext);
+}
+.activeStatus {
+    top: 45px;
+    left: 60px;
+    padding: 10px;
+}
+
+.userDetailContainer {
+    width: 100%;
+    padding: 15px 20px;
+}
+.userDetailContainer,
+.userNameandMessage,
+.MessageTimeAndCount {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.userNameandMessage,
+.MessageTimeAndCount {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.usersNameHeading {
+    font-weight: 600;
+    font-size: 20px;
+}
+.userMessageAndTime {
+    font-size: 14px;
+}
+.userNameandMessage,
+.usersNameHeading,
+.userMessage,
+.findFriendUsersName {
+    max-width: 220px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/*-------------------------Find Friends start-----------------------------*/
+.FriendListContainer {
+    height: calc(100vh - 218px);
+}
+.peopleAroundYou {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 10px 20px 10px;
+    color: var(--lighttext);
+}
+.findFriendUsersName {
+    max-width: 150px;
+}
+.btn {
+    font-size: 12px;
+    font-weight: 600;
+}
+.btn-primary {
+    background-color: var(--blue);
+}
 
 /*-------------------------Left pannel------------------------------*/
+/*-------------------------Chat section------------------------------*/
+.chatContainer {
+    width: 100%;
+    background-color: var(--baseColor);
+    position: relative;
+    height: 100%;
+}
+.chatViewer {
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    justify-content: flex-end;
+    overflow-y: auto;
+}
+.bottomMessageTyper {
+    position: absolute;
+    bottom: 0;
+    width: calc(100vw - 398px);
+    background-color: var(--white);
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.messageField {
+    width: 100%;
+    margin-right: 20px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border: 1px solid var(--border);
+    background-color: var(--baseColor);
+    color: var(--darktext);
+    font-size: 16px;
+}
+.fa-telegram-plane {
+    font-size: 30px;
+}
+
+.myMessageContainer {
+    position: relative;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    margin-left: calc(100% - 520px);
+    padding: 10px;
+    background-color: var(--border);
+    max-width: 500px;
+    min-width: 150px;
+    height: 50px;
+    text-align: left;
+    font: 400 0.9em "Open Sans", sans-serif;
+    border: 1px solid var(--border);
+    border-radius: 10px;
+    align-self: flex-end;
+}
+.myMessageContainer::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 15px solid var(--border);
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    top: -1px;
+    right: -15px;
+}
+
+.friendMessageContainer {
+    position: relative;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: var(--white);
+    max-width: 500px;
+    min-width: 150px;
+    height: 50px;
+    text-align: left;
+    font: 400 0.9em "Open Sans", sans-serif;
+    border: 1px solid var(--white);
+    border-radius: 10px;
+}
+.friendMessageContainer::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 15px solid var(--white);
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    top: -1px;
+    left: -15px;
+}
+/*-------------------------Chat End------------------------------*/
