--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,18 @@ code {
     margin: 0 !important;
     padding: 0 !important;
 }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a {
+    margin: 0;
+    padding: 0;
+    color: var(--darktext);
+}
 
 /*material ui css*/
 .MuiPaper-elevation4 {
