--- a/client/src/component/home/component/commonStyle.css
+++ b/client/src/component/home/component/commonStyle.css
@@ -73,7 +73,7 @@
     border: 1px solid var(--lighttext);
 }
 .activeStatus {
-    top: 45px;
+    top: 50px;
     left: 60px;
     padding: 10px;
 }
@@ -132,27 +132,97 @@
 .btn-primary {
     background-color: var(--blue);
 }
+/*-------------------------Find friend end------------------------------*/
+/*-------------------------Left pannel end------------------------------*/
 
-/*-------------------------Left pannel------------------------------*/
-/*-------------------------Chat section------------------------------*/
+/*-------------------------Chat section start------------------------------*/
 .chatContainer {
     width: 100%;
     background-color: var(--baseColor);
-    position: relative;
-    height: 100%;
+    height: calc(100vh - 60px);
 }
 .chatViewer {
-    height: 90%;
-    display: flex;
+    height: calc(100vh - 128px);
     flex-direction: column;
-    padding: 0 20px;
-    justify-content: flex-end;
+    padding: 10px 20px;
     overflow-y: auto;
 }
-.bottomMessageTyper {
+
+.myMessageContainer {
+    position: relative;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    margin-left: calc(100% - 520px);
+    padding: 10px;
+    background-color: var(--border);
+    max-width: 500px;
+    min-width: 150px;
+    min-height: 50px;
+    text-align: left;
+    font: 400 0.9em "Open Sans", sans-serif;
+    border: 1px solid var(--border);
+    border-radius: 10px;
+    align-self: flex-end;
+    display: flex;
+    justify-content: space-between;
+}
+.myMessageContainer::after {
+    content: "";
     position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 15px solid var(--border);
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    top: -0.5px;
+    right: -15px;
+}
+
+.friendMessageContainer {
+    position: relative;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: var(--white);
+    min-width: 150px;
+    max-width: 500px;
+    min-height: 50px;
+    text-align: left;
+    font: 400 0.9em "Open Sans", sans-serif;
+    border: 1px solid var(--white);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.friendMessageContainer::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 15px solid var(--white);
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    top: -0.5px;
+    left: -15px;
+}
+.message {
+    font-size: 16px;
+}
+.timeStamp {
+    margin: 0 0 0 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    color: var(--icon) !important;
+}
+.timeStamp > p {
+    color: var(--icon) !important;
+}
+.bottomMessageTyper {
+    position: sticky;
     bottom: 0;
-    width: calc(100vw - 398px);
+    width: calc(100vw - 385px);
     background-color: var(--white);
     padding: 10px 20px;
     display: flex;
@@ -172,58 +242,12 @@
 .fa-telegram-plane {
     font-size: 30px;
 }
-
-.myMessageContainer {
-    position: relative;
-    margin-right: 20px;
-    margin-bottom: 10px;
-    margin-left: calc(100% - 520px);
-    padding: 10px;
-    background-color: var(--border);
-    max-width: 500px;
-    min-width: 150px;
-    height: 50px;
-    text-align: left;
-    font: 400 0.9em "Open Sans", sans-serif;
-    border: 1px solid var(--border);
-    border-radius: 10px;
-    align-self: flex-end;
-}
-.myMessageContainer::after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 15px solid var(--border);
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    top: -1px;
-    right: -15px;
+.messageStatus {
+    color: var(--icon);
 }
 
-.friendMessageContainer {
-    position: relative;
-    margin-left: 20px;
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: var(--white);
-    max-width: 500px;
-    min-width: 150px;
-    height: 50px;
-    text-align: left;
-    font: 400 0.9em "Open Sans", sans-serif;
-    border: 1px solid var(--white);
-    border-radius: 10px;
-}
-.friendMessageContainer::after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 15px solid var(--white);
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    top: -1px;
-    left: -15px;
-}
+/*--------------------------------scroll to bottom float button start--------------------------------*/
+
+/*--------------------------------scroll to bottom float button end--------------------------------*/
+
 /*-------------------------Chat End------------------------------*/
