--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,8 @@
     --blue: #4d80e4;
     --link: #46b3e6;
     --border: #e5e5e5;
+    --red: #ff6363;
+    --green: #7dd175;
 }
 body {
     margin: 0;
@@ -42,7 +44,12 @@ a {
     padding: 0;
     color: var(--darktext);
 }
-
+.btn-primary {
+    background-color: var(--blue);
+}
+.bg-success {
+    background-color: var(--green) !important;
+}
 /*material ui css*/
 .MuiPaper-elevation4 {
     box-shadow: none !important;
