--- a/client/src/component/loginsignup/loginsignup.css
+++ b/client/src/component/loginsignup/loginsignup.css
@@ -1,5 +1,5 @@
 .signup{
-    padding:30px;
+    padding:20px;
     box-shadow: 0px 2px 3px rgba(0,0,0,0.2);
     border-radius: 20px;
     margin: 20px;
@@ -17,9 +17,8 @@
     color: #797979;
     font-weight: 600;
 }
-.loginsignup-container{
-    display: flex;
-    justify-content: center;
+.loginsignup{
+    margin-left: 160px;
 }
 .forgetpassword {
     color: #46b3e6;
@@ -35,16 +34,16 @@
 .image-upload>input {
     display: none;
   }
-#profile-img{
+#file-img{
 width:70px;
 height: 70px;
 cursor: pointer;
 text-align: center;
-transition: all 0.5s ease;
+transition: all 0.9s ease;
 display: block;
-margin-left: 100px
+margin-left: 110px
 }
-#profile-img:hover{
+#file-img:hover{
     transform:scale(1.02, 1.02);
     opacity: 0.7;
 }
