--- a/client/src/component/home/component/commonStyle.css
+++ b/client/src/component/home/component/commonStyle.css
@@ -198,6 +198,7 @@
     flex-direction: column;
     padding: 10px 20px;
     overflow-y: auto;
+    scroll-behavior: smooth;
 }
 
 .myMessageContainer {
