--- a/client/src/component/home/component/commonStyle.css
+++ b/client/src/component/home/component/commonStyle.css
@@ -218,6 +218,7 @@
     display: flex;
     align-self: flex-end;
     justify-content: space-between;
+    flex-direction: column;
 }
 .myMessageContainer::after {
     content: "";
@@ -246,6 +247,7 @@
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
 }
 .friendMessageContainer::after {
     content: "";
@@ -260,17 +262,21 @@
 }
 .message {
     font-size: 16px;
+    word-wrap: break-word;
 }
 .timeStamp {
-    margin: 20px 0 0 10px;
+    margin: 10px 0 0 0;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: flex-end;
     align-items: flex-end;
     color: var(--icon) !important;
 }
-.timeStamp > p {
+.timeStamp p {
     color: var(--icon) !important;
+}
+.timeStamp p:nth-child(1) {
+    margin-right: 10px;
 }
 .bottomMessageTyper {
     position: sticky;
