--- a/client/src/component/home/component/commonStyle.css
+++ b/client/src/component/home/component/commonStyle.css
@@ -200,6 +200,13 @@
     overflow-y: auto;
     scroll-behavior: smooth;
 }
+.noMessageContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .myMessageContainer {
     position: relative;
@@ -209,7 +216,7 @@
     padding: 10px;
     background-color: var(--border);
     max-width: 500px;
-    min-width: 150px;
+    min-width: 120px;
     width: fit-content;
     text-align: left;
     font: 400 0.9em "Open Sans", sans-serif;
@@ -230,6 +237,7 @@
     border-right: 15px solid transparent;
     top: -0.5px;
     right: -15px;
+    border-radius: 20px;
 }
 
 .friendMessageContainer {
@@ -238,7 +246,7 @@
     margin-bottom: 10px;
     padding: 10px;
     background-color: var(--white);
-    min-width: 150px;
+    min-width: 120px;
     width: fit-content;
     max-width: 500px;
     text-align: left;
@@ -259,18 +267,20 @@
     border-right: 15px solid transparent;
     top: -0.5px;
     left: -15px;
+    border-radius: 20px;
 }
 .message {
     font-size: 16px;
     word-wrap: break-word;
 }
 .timeStamp {
-    margin: 10px 0 0 0;
+    margin: 5px 0 0 0;
     display: flex;
     /* flex-direction: column; */
     justify-content: flex-end;
     align-items: flex-end;
     color: var(--icon) !important;
+    font-size: 10px;
 }
 .timeStamp p {
     color: var(--icon) !important;
